fix login google -v2

--- a/src/pages/Cart/style.scss
+++ b/src/pages/Cart/style.scss
@@ -175,7 +175,8 @@
 }
 
 .checkout-info__user__address {
-  font-size: 1.2rem;
+  font-size: 1.4rem;
+  font-weight: bold;
 }
 .checkout-info__discount {
   margin-top: 20px;
