--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,15 +1,11 @@
 /* css header */
 .header {
   background-image: linear-gradient(120deg, #006bd6, var(--colorPrimary));
-  position: fixed;
+  position: sticky;
   width: 100%;
   top: 0;
   z-index: 100;
   transition: all 0.4s ease;
-}
-
-.header ~ div {
-  margin-top: 150px;
 }
 
 .navbar {
@@ -419,7 +415,7 @@
 }
 
 .navbar__link.navbar__link--menuItem {
-  background-color: #fff !important;
+  background-color: transparent;
   border: none;
   outline: none;
   color: #333;
@@ -427,4 +423,8 @@
   cursor: pointer;
   font-size: 1.4rem;
   padding-left: 0;
+}
+
+.navbar__link.navbar__link--menuItem:hover {
+  background-color: transparent !important;
 }
