--- a/src/components/productItem/style.scss
+++ b/src/components/productItem/style.scss
@@ -37,6 +37,12 @@
     flex-direction: column;
     justify-content: space-between;
   }
+  .ant-rate {
+    font-size: 1.4rem;
+    li {
+      margin-right: 2px;
+    }
+  }
 }
 
 .productItem__img {
@@ -45,6 +51,10 @@
   background-origin: content-box;
   position: relative;
   padding: 10px;
+
+  img {
+    object-fit: cover;
+  }
 }
 
 .productItem__img > div {
