add confirm ordered function of user

--- a/src/pages/Home/productDiscoutList/style.scss
+++ b/src/pages/Home/productDiscoutList/style.scss
@@ -10,6 +10,7 @@
   .swiper-slide {
     font-size: 18px;
     background: #fff;
+    padding: 1px;
 
     /* Center slide text vertically */
     display: -webkit-box;
